--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+   <head>
+      <script src="myScripts.js">     </script>
+      </head>   
   <body>
     <h4>Where to start‽   </h4>
         <input type="text" id="start" />
